# openapimcp

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/misc/templates/: docs.html
.github/workflows/: check_docs.yml  ci-mcp.yml  ci.yml  docs.yml  issue-notify.yml  release-mcp.yml  release.yml
c/: Cargo.toml
c/crates/macros/: Cargo.toml
c/crates/macros/src/: cenum.rs  lib.rs
c/src/: async_call.rs  config.rs  http_client.rs
c/src/quote_context/: context.rs  enum_types.rs
c/src/trade_context/: context.rs  types.rs
cpp/src/: convert.hpp
examples/cpp/history_candlesticks_by_offset/: history_candlesticks_by_offset.cpp
java/: Cargo.toml
java/crates/macros/: Cargo.toml
java/src/: async_util.rs  config.rs  error.rs  http_client.rs  init.rs  quote_context.rs  trade_context.rs
java/src/types/: classes.rs  enum_types.rs  mod.rs  primary_types.rs
mcp/: CHANGELOG.md  Cargo.toml  README.md  install
mcp/src/: main.rs  server.rs
nodejs/: Cargo.toml  index.d.ts  index.js  package.json
nodejs/crates/macros/: Cargo.toml
nodejs/src/: config.rs  types.rs  utils.rs
nodejs/src/quote/: context.rs  types.rs
nodejs/src/trade/: context.rs  types.rs
python/: Cargo.toml  Makefile.toml  pyproject.toml
python/src/: decimal.rs  time.rs
rust/: Cargo.toml  README.md
rust/crates/candlesticks/: Cargo.toml
rust/crates/candlesticks/src/: candlestick.rs  lib.rs  market.rs  markets.rs  testutil.rs  types.rs
rust/crates/candlesticks/tests/: cn_time.rs  cn_ts.rs  us_time.rs  us_ts.rs
rust/src/: config.rs  lib.rs  serde_utils.rs
(+40 files in other folders)
