[package]
edition.workspace = true
name = "longport-candlesticks"
version = "3.0.12"
description = "LongPort candlestick utils for Rust"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags.workspace = true
rust_decimal.workspace = true
time = { workspace = true, features = ["macros"] }
time-tz.workspace = true
num-traits.workspace = true
